Add Q2 2025 Form 13F data (TSV format with Git LFS)
- Added SEC Form 13F bulk data for Q2 2025 (01-JUN-2025 to 31-AUG-2025)
- INFOTABLE.tsv: 331MB of holdings data (tracked with Git LFS)
- SUBMISSION.tsv: Filing metadata for all submissions
- COVERPAGE.tsv: Filing manager information
- SUMMARYPAGE.tsv: Summary statistics
- SIGNATURE.tsv: Signatory data
- OTHERMANAGER.tsv & OTHERMANAGER2.tsv: Other manager data
- FORM13F_metadata.json: Complete schema definitions
- FORM13F_readme.htm: SEC documentation
- Updated .gitignore to allow TSV/JSON/HTM files in data/raw/
- Updated data/raw/README.md with TSV format documentation
- Configured Git LFS for large TSV files (.gitattributes)

--- a/.gitignore
+++ b/.gitignore
@@ -49,11 +49,14 @@ data/cache/*
 !data/processed/.gitkeep
 !data/cache/.gitkeep
 
-# Keep 13F XML forms in data/raw/
-# Ignore other files but allow .xml files and README.md
+# Keep 13F data files in data/raw/
+# Allow TSV, JSON, and documentation files
 data/raw/*
 !data/raw/.gitkeep
 !data/raw/*.xml
+!data/raw/*.tsv
+!data/raw/*.json
+!data/raw/*.htm
 !data/raw/README.md
 
 # Jupyter Notebooks
