--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,3 +89,23 @@ python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "-v --cov=src --cov-report=term-missing"
 asyncio_mode = "auto"
+
+[tool.coverage.run]
+source = ["src"]
+omit = [
+    "src/ingestion/edgar_client.py",  # Old stub - not used
+    "src/ingestion/parser.py",  # Old stub - replaced by tsv_parser
+    "src/ingestion/__main__.py",  # Entry point - tested manually
+    "src/ingestion/ingest.py",  # CLI entry point - tested manually
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "if TYPE_CHECKING:",
+    "@abstractmethod",
+]
