Add Docker + Supabase dual environment support
Environment Templates:
- .env.local: Docker PostgreSQL configuration (localhost:5432)
- .env.supabase: Supabase cloud PostgreSQL configuration
- .env: Active config (gitignored, created by switching scripts)

Switching Scripts:
- scripts/use-docker.bat: Switch to Docker (local dev)
- scripts/use-supabase.bat: Switch to Supabase (cloud/production)

Documentation:
- DATABASE_SETUP.md: Complete guide for both environments
  * Docker setup instructions
  * Supabase setup instructions
  * How to switch between them
  * Common operations (migrations, data loading)
  * Troubleshooting

Benefits:
- Local development with Docker (fast, offline)
- Production deployment with Supabase (managed, backups)
- Easy switching with one command
- Same codebase works with both

Updated .gitignore:
- Only .env is ignored (contains secrets)
- .env.local and .env.supabase are templates (committed)

--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,8 @@ ENV/
 *~
 
 # Environment Variables
-.env
-.env.local
-.env.*.local
+.env                    # Active config (gitignored - contains secrets)
+# Note: .env.local and .env.supabase are templates (committed to repo)
 
 # Database
 *.db
