Optimize Docker image size for RAG deployment
- Remove explicit torch dependency (installed via sentence-transformers)
- Add cleanup steps to remove unnecessary files from image
- Update .dockerignore to exclude data files and scripts
- Reduces image size to fit within Railway 4GB limit

--- a/.dockerignore
+++ b/.dockerignore
@@ -40,10 +40,14 @@ htmlcov/
 tests/
 
 # Data (will be mounted as volumes)
-data/raw/*
-data/processed/*
-data/cache/*
+data/
 logs/
+*.csv
+*.tsv
+*.xml
+nul
+scripts/
+.claude/
 
 # Environment files
 .env
